--- a/.rancher-pipeline.yml
+++ b/.rancher-pipeline.yml
@@ -7,5 +7,10 @@ stages:
       tag: nickngch90/ssl-nginx:latest
       pushRemote: true
       registry: index.docker.io
+- name: Generate Certificate
+  steps:
+  - runScriptConfig:
+      image: node:latest
+      shellScript: sh self_sign_tls.sh nginx.nick-test.com 127.0.0.1
 timeout: 60
 notification: {}
