--- a/.rancher-pipeline.yml
+++ b/.rancher-pipeline.yml
@@ -11,6 +11,6 @@ stages:
       buildContext: .
       tag: nickngch90/ssl-nginx:latest
       pushRemote: true
-      registry: index.docker.io
+      registry: 127.0.0.1:34374
 timeout: 60
 notification: {}
