--- a/.rancher-pipeline.yml
+++ b/.rancher-pipeline.yml
@@ -12,5 +12,9 @@ stages:
       tag: nickngch90/ssl-nginx:latest
       pushRemote: true
       registry: index.docker.io
+- name: deployment
+  steps:
+  - applyYamlConfig:
+      path: ./deployment.yaml
 timeout: 60
 notification: {}
