fixed deployment.yaml 2

--- a/deployment.yaml
+++ b/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: ssl-nginx:latest
+        image: nickgnch90/ssl-nginx:latest
         ports:
         - containerPort: 443
 
