--- a/.rancher-pipeline.yml
+++ b/.rancher-pipeline.yml
@@ -1,7 +1,9 @@
 stages:
-- name: deployment
+- name: build
   steps:
-  - applyYamlConfig:
-      path: ./deployment.yaml
+  - publishImageConfig:
+      dockerfilePath: ./Dockerfile
+      buildContext: .
+      tag: nickngch90/nginx-ssl
 timeout: 60
 notification: {}
