Update .rancher-pipeline.yml file

--- a/.rancher-pipeline.yml
+++ b/.rancher-pipeline.yml
@@ -2,7 +2,7 @@ stages:
 - name: Generate Certificate
   steps:
   - runScriptConfig:
-      image: ubuntu:latest
+      image: ubuntu
       shellScript: ./self_sign_tls.sh proxy.nick-test.com 127.0.0.1
 - name: build
   steps:
