--- a/.rancher-pipeline.yml
+++ b/.rancher-pipeline.yml
@@ -13,6 +13,6 @@ stages:
       buildContext: .
       tag: nickngch90/ssl-nginx:latest
       pushRemote: true
-      registry: 127.0.0.1:34130
+      registry: index.docker.io
 timeout: 60
 notification: {}
