--- a/.rancher-pipeline.yml
+++ b/.rancher-pipeline.yml
@@ -9,7 +9,7 @@ stages:
 - name: build
   steps:
   - publishImageConfig:
-      dockerfilePath: ./Dockerfile
+      dockerfilePath: ./dockerfile
       buildContext: .
       tag: nickngch90/ssl-nginx:latest
       pushRemote: true
