Update .rancher-pipeline.yml file

--- a/.rancher-pipeline.yml
+++ b/.rancher-pipeline.yml
@@ -17,6 +17,7 @@ stages:
   steps:
   - applyYamlConfig:
       path: ./deployment.yaml
+      targetNamespace: default
     envFrom:
     - sourceName: cideploy
       sourceKey: token-2sr87
