Update .rancher-pipeline.yml file

--- a/.rancher-pipeline.yml
+++ b/.rancher-pipeline.yml
@@ -17,7 +17,7 @@ stages:
   steps:
   - applyYamlConfig:
       path: ./deployment.yaml
-      targetNamespace: default
+      namespace: default
     envFrom:
     - sourceName: cideploy
       sourceKey: token-2sr87
