--- a/.rancher-pipeline.yml
+++ b/.rancher-pipeline.yml
@@ -14,6 +14,8 @@ stages:
       tag: ssl-nginx:${CICD_EXECUTION_SEQUENCE}
       pushRemote: true
       registry: 13.59.136.164:30553
+    env:
+      PLUGIN_INSECURE: "true"
 - name: deploy
   steps:
   - applyYamlConfig:
